<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/length"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/reps_spinner"
            android:layout_width="100dp"
            android:prompt="@string/choose_reps"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/X"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/length_spinner"
            android:layout_width="100dp"
            android:prompt="@string/choose_length"
            android:layout_height="wrap_content"/>
        <!-- TODO: make yards/meters based on settings-->
        <TextView
            android:id="@+id/yards_meters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:text="@string/yards"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="20sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pace"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:gravity="center"/>

            <Spinner
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pace_spinner"
                android:prompt="@string/choose_pace"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:entries="@array/types"
                android:prompt="@string/choose_type"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/cancel_slice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/update_slice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"/>

    </LinearLayout>

</LinearLayout>