<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/new_set_name"
        android:hint="@string/enter_set_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        style="?android:attr/buttonBarStyle"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_set"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_blank"
            android:id="@+id/create_blank_set"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_default"
            android:id="@+id/create_default_set"/>

    </LinearLayout>

</LinearLayout>