<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/number_of_reps"/>

    <NumberPicker
        android:layout_gravity="center"
        android:id="@+id/loop_rep_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:id="@+id/create"
            android:text="@string/create"/>



    </LinearLayout>
</LinearLayout>