<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/section_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/hidden"
                android:id="@+id/section_info"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/section_buttons"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add"
                android:id="@+id/add"
                android:background="@drawable/add_background"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/edit"
                android:id="@+id/edit"
                android:background="@drawable/edit_background"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/delete_background"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/delete"
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/section_slice_container"
            android:orientation="vertical">
    </LinearLayout>

    </LinearLayout>

