<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="false"
    android:onClick="posLoopClicked">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".1"/>

    <ViewSwitcher
        android:id="@+id/slice_switcher"
        android:layout_width="0dp"
        android:layout_weight=".9"
        android:layout_height="wrap_content"
        android:measureAllChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="flipSlice"
                android:id="@+id/slice_read"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:clickable="true"
                android:layout_width="0dp"
                android:onClick="flipSlice"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/slice_info"
                android:textSize="20sp"
                android:gravity="start|center_vertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/slice_buttons"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/add"
                    android:id="@+id/add"
                    android:background="@drawable/add_background"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/edit"
                    android:id="@+id/edit"
                    android:background="@drawable/edit_background"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/delete_background"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/delete"
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

            </LinearLayout>
        </LinearLayout>

    </ViewSwitcher>
</LinearLayout>